[package]
name = "taktctl"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
clap = { version = "3.0.10", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "taktctl"
